more error handling and list feature for Problem and Solution
