# requesthandler/problem_request_handler.go
@@ -9,22 +9,17 @@ import (
 
 func HandleProblemPost(params problem.PostProblemParams) middleware.Responder {
 	//create the problem
-	problem_id := dbhandler.ProblemCreate(*params.Problem)
+	error := dbhandler.ProblemCreate(*params.Problem)
 
-	if problem_id == -1 {
+	if error.Code != *params.Problem.ProblemID {
 		resp := problem.NewPostProblemDefault(400)
-		error := new(models.Error)
-		error.Code = -1
-		error.Message = "Failed to create Problem"
-
-		resp.SetPayload(error)
-
+		resp.SetPayload(&error)
 		return resp
 	}
 
 	// create the response
 	resp := problem.NewPostProblemOK()
-	problem := dbhandler.ProblemRead(problem_id)
+	problem := dbhandler.ProblemRead(*params.Problem.ProblemID)
 
 	//set response data
 	resp.SetPayload(&problem)
@@ -37,7 +32,7 @@ func HandleProblemGet(params problem.GetProblemIDParams) middleware.Responder {
 	//get problem details based on the provided id
 	problem_data := dbhandler.ProblemRead(params.ID)
 
-	if problem_data.ProblemID == 0 {
+	if *problem_data.ProblemID == 0 {
 		resp := problem.NewGetProblemIDDefault(404)
 		error := &models.Error{Code: -1, Message: "Problem not found"}
 
@@ -52,11 +47,11 @@ func HandleProblemGet(params problem.GetProblemIDParams) middleware.Responder {
 }
 
 func HandleProblemPut(params problem.PutProblemParams) middleware.Responder {
-	success := dbhandler.ProblemUpdate(*params.Problem)
+	code := dbhandler.ProblemUpdate(*params.Problem)
 
 	error := new(models.Error)
 
-	if !success {
+	if code <= 0 {
 		error.Message = "Error: update failed"
 		resp := problem.NewPostProblemDefault(400)
 		resp.SetPayload(error)
@@ -72,11 +67,11 @@ func HandleProblemPut(params problem.PutProblemParams) middleware.Responder {
 }
 
 func HandleProblemDelete(params problem.DeleteProblemIDParams) middleware.Responder {
-	success := dbhandler.ProblemDelete(params.ID)
+	code := dbhandler.ProblemDelete(params.ID)
 
 	error := new(models.Error)
 
-	if !success {
+	if code <= 0 {
 		error.Message = "Error: Unexpected number of deletes"
 		resp := problem.NewDeleteProblemIDDefault(400)
 		resp.SetPayload(error)
@@ -107,5 +102,22 @@ func HandleProblemGetList(params problem.GetProblemParams) middleware.Responder 
 	resp := problem.NewGetProblemOK()
 	resp.SetPayload(problem_list)
 
+	return resp
+}
+
+func HandleGetProblemIDSolutions(params problem.GetProblemIDSolutionsParams) middleware.Responder {
+	solution_list := dbhandler.SolutionForProblem(params.ID)
+
+	if solution_list == nil {
+		resp := problem.NewGetProblemIDSolutionsDefault(404)
+		error := &models.Error{Code: -1, Message: "No Solution found"}
+
+		resp.SetPayload(error)
+		return resp
+	}
+
+	resp := problem.NewGetProblemIDSolutionsOK()
+
+	resp.SetPayload(solution_list)
 	return resp
 }
